--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "prepare": "husky install",
+    "lint-staged": "lint-staged",
+    "test": "echo \"No tests configured\" && exit 0"
   },
   "dependencies": {
     "core-js": "^3.8.3",
@@ -16,23 +19,37 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@commitlint/cli": "^19.7.1",
+    "@commitlint/config-conventional": "^19.7.1",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-standard": "^6.1.0",
+    "cz-customizable": "^7.4.0",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^7.20.0",
-    "lint-staged": "^11.1.2",
+    "husky": "^8.0.0",
+    "lint-staged": "^11.2.6",
     "prettier": "^3.5.3",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
-  }
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-customizable"
+    }
+  },
+  "lint-staged": {
+  "src/**/*.{js,vue}": [
+    "eslint --fix"
+  ]
+}
 }
