--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "prepare": "husky install",
     "lint-staged": "lint-staged",
+    "prepare": "husky install",
     "test": "echo \"No tests configured\" && exit 0"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "core-js": "^3.8.3",
+    "element-plus": "^2.9.5",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
@@ -37,19 +39,20 @@
     "lint-staged": "^11.2.6",
     "prettier": "^3.5.3",
     "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
-  },
-  "gitHooks": {
-    "pre-commit": "lint-staged"
+    "sass-loader": "^12.0.0",
+    "vue-cli-plugin-element-plus": "~0.0.13"
   },
   "config": {
     "commitizen": {
       "path": "node_modules/cz-customizable"
     }
   },
+  "gitHooks": {
+    "pre-commit": "lint-staged"
+  },
   "lint-staged": {
-  "src/**/*.{js,vue}": [
-    "eslint --fix"
-  ]
-}
+    "src/**/*.{js,vue}": [
+      "eslint --fix"
+    ]
+  }
 }
