--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "prettier": "^3.5.3",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
+    "svg-sprite-loader": "^6.0.11",
     "vue-cli-plugin-element-plus": "~0.0.13"
   },
   "config": {
